GearsetPOC/force-app/main/default/objects/PoS__c/PoS__c.object-meta.xml
<CustomObject>
    <label>PoS</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>PoS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PoS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>