GearsetPOC/force-app/main/default/objects/PoS__c/fields/Booking_Market_1__c.field-meta.xml
<CustomField>
    <fullName>Booking_Market_1__c</fullName>
    <label>Booking Market 1</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Non-Core Europe</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>RoW</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>