GearsetPOC/force-app/main/default/objects/PoS__c/fields/Booking_Market_2__c.field-meta.xml
<CustomField>
    <fullName>Booking_Market_2__c</fullName>
    <label>Booking Market 2</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Booking_Market_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
            <value>
                <fullName>Switzerland</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Eastern Europe</fullName>
            </value>
            <value>
                <fullName>Northern Europe</fullName>
            </value>
            <value>
                <fullName>Central Europe</fullName>
            </value>
            <value>
                <fullName>Western Europe</fullName>
            </value>
            <value>
                <fullName>Portugal</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Non-Core Europe</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
                <label>Australia &amp; New Zealand</label>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>RoW Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>