GearsetPOC/force-app/main/default/objects/PoS__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Business Account, filtered on Trade Accounts</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Business_Account__c.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Agency Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>PoS</relationshipLabel>
    <relationshipName>PoS</relationshipName>
    <type>Lookup</type>
</CustomField>