GearsetPOC/force-app/main/default/objects/PoS__c/fields/Channel_1__c.field-meta.xml
<CustomField>
    <fullName>Channel_1__c</fullName>
    <label>Channel 1</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agencies</fullName>
            </value>
            <value>
                <fullName>Call Centres/HQ</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Distributor Websites</fullName>
            </value>
            <value>
                <fullName>Stations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>