GearsetPOC/force-app/main/default/objects/PoS__c/fields/Channel_2__c.field-meta.xml
<CustomField>
    <fullName>Channel_2__c</fullName>
    <label>Channel 2</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Channel_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agencies</fullName>
            </value>
            <value>
                <fullName>Call Centres</fullName>
            </value>
            <value>
                <fullName>Distributor Websites</fullName>
            </value>
            <value>
                <fullName>Eurostar Digital</fullName>
            </value>
            <value>
                <fullName>Eurostar Snap</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Stations</fullName>
            </value>
            <value>
                <fullName>Thalys Digital</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>