GearsetPOC/force-app/main/default/objects/PoS__c/fields/Channel_4__c.field-meta.xml
<CustomField>
    <fullName>Channel_4__c</fullName>
    <label>Channel 4</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Channel_3__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Airrail free flow</fullName>
            </value>
            <value>
                <fullName>Bahn.de</fullName>
            </value>
            <value>
                <fullName>B-Europe.com</fullName>
            </value>
            <value>
                <fullName>Business Agents TMC</fullName>
            </value>
            <value>
                <fullName>Call Centre DB</fullName>
            </value>
            <value>
                <fullName>Call Centre Eurostar</fullName>
            </value>
            <value>
                <fullName>Call Centre NS</fullName>
            </value>
            <value>
                <fullName>Call Centre Others</fullName>
            </value>
            <value>
                <fullName>Call centre Rail Europe</fullName>
            </value>
            <value>
                <fullName>Call Centre SNCB</fullName>
            </value>
            <value>
                <fullName>Call Centre SNCF</fullName>
            </value>
            <value>
                <fullName>Call Centre Thalys</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>DB Stations: Germany</fullName>
            </value>
            <value>
                <fullName>EIL: Small distributors</fullName>
            </value>
            <value>
                <fullName>Eurostar App</fullName>
            </value>
            <value>
                <fullName>Eurostar Bulk Changes</fullName>
            </value>
            <value>
                <fullName>Eurostar Business Portal</fullName>
            </value>
            <value>
                <fullName>Eurostar Snap</fullName>
            </value>
            <value>
                <fullName>Eurostar Stations: Belgium</fullName>
            </value>
            <value>
                <fullName>Eurostar Stations: France</fullName>
            </value>
            <value>
                <fullName>Eurostar Stations: UK</fullName>
            </value>
            <value>
                <fullName>Eurostar Website</fullName>
            </value>
            <value>
                <fullName>Helpdesk</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>Indirect Sales</fullName>
            </value>
            <value>
                <fullName>Leisure Travel Agents</fullName>
            </value>
            <value>
                <fullName>Mixed agents</fullName>
            </value>
            <value>
                <fullName>Non Eurostar station: Other</fullName>
            </value>
            <value>
                <fullName>NSInt.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>