GearsetPOC/force-app/main/default/objects/PoS__c/fields/channel__c.field-meta.xml
<CustomField>
    <fullName>channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGENCIES</fullName>
            </value>
            <value>
                <fullName>CALL CENTRES</fullName>
            </value>
            <value>
                <fullName>EUROSTAR.COM</fullName>
            </value>
            <value>
                <fullName>INTERNAL</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>OUI.SNCF</fullName>
                <label>SNCF CONNECT</label>
            </value>
            <value>
                <fullName>RAIL EUROPE</fullName>
            </value>
            <value>
                <fullName>SNCB</fullName>
            </value>
            <value>
                <fullName>SNCB.BE</fullName>
            </value>
            <value>
                <fullName>STATIONS</fullName>
            </value>
            <value>
                <fullName>TRAVEL PORTALS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>