GearsetPOC/force-app/main/default/objects/PoS__c/fields/Connectivity_1__c.field-meta.xml
<CustomField>
    <fullName>Connectivity_1__c</fullName>
    <label>Connectivity 1</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S3</fullName>
            </value>
            <value>
                <fullName>Voyager</fullName>
            </value>
            <value>
                <fullName>Partners API</fullName>
            </value>
            <value>
                <fullName>PAO</fullName>
            </value>
            <value>
                <fullName>S3 GDS Module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>