GearsetPOC/force-app/main/default/objects/PoS__c/fields/Connectivity_2__c.field-meta.xml
<CustomField>
    <fullName>Connectivity_2__c</fullName>
    <label>Connectivity 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Connectivity_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>E_PACKAGE</fullName>
            </value>
            <value>
                <fullName>EIL_DIGITAL</fullName>
            </value>
            <value>
                <fullName>EUROSTAR AGENT PORTAL</fullName>
            </value>
            <value>
                <fullName>NON_UK_TA_AGENT_PORTAL</fullName>
            </value>
            <value>
                <fullName>UK_TA_AGENT_PORTAL</fullName>
            </value>
            <value>
                <fullName>NON_UK_TA_ONLINE</fullName>
            </value>
            <value>
                <fullName>UK_TA_ONLINE</fullName>
            </value>
            <value>
                <fullName>PAO_AGENT_AGENT</fullName>
            </value>
            <value>
                <fullName>PAO_AGENT_DIGITAL</fullName>
            </value>
            <value>
                <fullName>PAO_SBT_DIGITAL</fullName>
            </value>
            <value>
                <fullName>PAO_SNCF_DIGITAL</fullName>
            </value>
            <value>
                <fullName>PAO_REUR_AGENT</fullName>
            </value>
            <value>
                <fullName>PAO_BENE_AGENT</fullName>
            </value>
            <value>
                <fullName>PAO_BENE_DIGITAL</fullName>
            </value>
            <value>
                <fullName>PAO_CFF_AGENT</fullName>
            </value>
            <value>
                <fullName>PAO_CFF_DIGITAL</fullName>
            </value>
            <value>
                <fullName>PAO_DB_AGENT</fullName>
            </value>
            <value>
                <fullName>PAO_DB_DIGITAL</fullName>
            </value>
            <value>
                <fullName>PAO_LASTMINUTE_DIGITAL</fullName>
            </value>
            <value>
                <fullName>GDS AIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>