GearsetPOC/force-app/main/default/objects/PoS__c/fields/Distributor_1__c.field-meta.xml
<CustomField>
    <fullName>Distributor_1__c</fullName>
    <label>Distributor 1</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EIL</fullName>
            </value>
            <value>
                <fullName>THALYS</fullName>
            </value>
            <value>
                <fullName>SNCF</fullName>
            </value>
            <value>
                <fullName>SNCB</fullName>
            </value>
            <value>
                <fullName>NS</fullName>
            </value>
            <value>
                <fullName>DB</fullName>
            </value>
            <value>
                <fullName>RAIL EUROPE</fullName>
            </value>
            <value>
                <fullName>OTHER SELLING RAILWAYS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>