GearsetPOC/force-app/main/default/objects/PoS__c/fields/Distributor_2__c.field-meta.xml
<CustomField>
    <fullName>Distributor_2__c</fullName>
    <label>Distributor 2</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Distributor_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EHL Digital</fullName>
            </value>
            <value>
                <fullName>EIL B2B</fullName>
            </value>
            <value>
                <fullName>EIL Digital</fullName>
            </value>
            <value>
                <fullName>EIL EBSC</fullName>
            </value>
            <value>
                <fullName>EIL Stations</fullName>
            </value>
            <value>
                <fullName>THALYS</fullName>
            </value>
            <value>
                <fullName>SNCF</fullName>
            </value>
            <value>
                <fullName>SNCB</fullName>
            </value>
            <value>
                <fullName>NS</fullName>
            </value>
            <value>
                <fullName>DB</fullName>
            </value>
            <value>
                <fullName>RAIL EUROPE</fullName>
            </value>
            <value>
                <fullName>CFL</fullName>
            </value>
            <value>
                <fullName>SBB</fullName>
            </value>
            <value>
                <fullName>OTHER DISTRIBUTORS</fullName>
            </value>
            <value>
                <fullName>DSB</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>