GearsetPOC/force-app/main/default/objects/PoS__c/fields/distributor__c.field-meta.xml
<CustomField>
    <fullName>distributor__c</fullName>
    <label>Distributor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFL</fullName>
            </value>
            <value>
                <fullName>DB</fullName>
            </value>
            <value>
                <fullName>EHL DIGITAL</fullName>
            </value>
            <value>
                <fullName>EIL</fullName>
            </value>
            <value>
                <fullName>EIL DIGITAL</fullName>
            </value>
            <value>
                <fullName>EIL EBSC</fullName>
            </value>
            <value>
                <fullName>EIL EBSC GROUPS</fullName>
            </value>
            <value>
                <fullName>EIL STATIONS</fullName>
            </value>
            <value>
                <fullName>NS</fullName>
            </value>
            <value>
                <fullName>RAIL EUROPE</fullName>
            </value>
            <value>
                <fullName>SBB</fullName>
            </value>
            <value>
                <fullName>SNCB</fullName>
            </value>
            <value>
                <fullName>SNCF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>