GearsetPOC/force-app/main/default/objects/PoS__c/fields/DistributorChannel__c.field-meta.xml
<CustomField>
    <fullName>DistributorChannel__c</fullName>
    <label>Distributor Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>distributor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DB</fullName>
            </value>
            <value>
                <fullName>EIL BUSINESS AGENTS</fullName>
            </value>
            <value>
                <fullName>EIL BUSINESS PORTAL</fullName>
            </value>
            <value>
                <fullName>EIL CONTACT CENTRE</fullName>
            </value>
            <value>
                <fullName>EIL LEISURE AGENTS</fullName>
            </value>
            <value>
                <fullName>EIL PACKAGES</fullName>
            </value>
            <value>
                <fullName>EIL STATIONS</fullName>
            </value>
            <value>
                <fullName>EUROSTAR.COM</fullName>
            </value>
            <value>
                <fullName>NS</fullName>
            </value>
            <value>
                <fullName>ONLINE TRAVEL AGENCIES</fullName>
            </value>
            <value>
                <fullName>OTHER SELLING RAILWAYS</fullName>
            </value>
            <value>
                <fullName>RAIL EUROPE</fullName>
            </value>
            <value>
                <fullName>SNAP</fullName>
            </value>
            <value>
                <fullName>SNCB BUSINESS AGENTS</fullName>
            </value>
            <value>
                <fullName>SNCB CONTACT CENTRE</fullName>
            </value>
            <value>
                <fullName>SNCB DIGITAL</fullName>
            </value>
            <value>
                <fullName>SNCB LEISURE AGENTS</fullName>
            </value>
            <value>
                <fullName>SNCB STATIONS</fullName>
            </value>
            <value>
                <fullName>SNCF BUSINESS AGENTS</fullName>
            </value>
            <value>
                <fullName>SNCF CONTACT CENTRE</fullName>
            </value>
            <value>
                <fullName>SNCF DIGITAL</fullName>
            </value>
            <value>
                <fullName>SNCF LEISURE AGENTS</fullName>
            </value>
            <value>
                <fullName>SNCF STATIONS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>