GearsetPOC/force-app/main/default/objects/PoS__c/fields/market__c.field-meta.xml
<CustomField>
    <fullName>market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BELGIUM</fullName>
            </value>
            <value>
                <fullName>FRANCE</fullName>
            </value>
            <value>
                <fullName>GDS MARKET</fullName>
            </value>
            <value>
                <fullName>GERMANY</fullName>
            </value>
            <value>
                <fullName>ITALY</fullName>
            </value>
            <value>
                <fullName>NETHERLANDS</fullName>
            </value>
            <value>
                <fullName>NON-CORE EUROPE</fullName>
            </value>
            <value>
                <fullName>NORTH AMERICA</fullName>
            </value>
            <value>
                <fullName>SPAIN</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>ROW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>