GearsetPOC/force-app/main/default/objects/PoS__c/fields/pos_code__c.field-meta.xml
<CustomField>
    <fullName>pos_code__c</fullName>
    <externalId>true</externalId>
    <label>PoS Code</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>