GearsetPOC/force-app/main/default/objects/PoS__c/fields/pos_description__c.field-meta.xml
<CustomField>
    <fullName>pos_description__c</fullName>
    <label>PoS Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>