GearsetPOC/force-app/main/default/objects/PoS__c/fields/Thalys_UNI_Code__c.field-meta.xml
<CustomField>
    <fullName>Thalys_UNI_Code__c</fullName>
    <description>Thalys UNI Code</description>
    <externalId>true</externalId>
    <label>Thalys UNI Code</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>