GearsetPOC/force-app/main/default/objects/PoS__c/fields/Tmc_Managed_Company__c.field-meta.xml
<CustomField>
    <fullName>Tmc_Managed_Company__c</fullName>
    <label>Tmc Managed Company</label>
    <length>200</length>
    <type>Text</type>
</CustomField>