GearsetPOC/force-app/main/default/objects/PoS__c/fields/Tmc_Managed_Status__c.field-meta.xml
<CustomField>
    <fullName>Tmc_Managed_Status__c</fullName>
    <label>Tmc Managed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MANAGED</fullName>
            </value>
            <value>
                <fullName>UNMANAGED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>