GearsetPOC/force-app/main/default/objects/PoS__c/validationRules/Company_Cant_Be_Empty_For_Status_Managed.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_Cant_Be_Empty_For_Status_Managed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Tmc_Managed_Status__c, &quot;Managed&quot;),
  ISBLANK(Tmc_Managed_Company__c)
)</errorConditionFormula>
    <errorDisplayField>Tmc_Managed_Company__c</errorDisplayField>
    <errorMessage>Tmc Managed Company cannot be empty if Tmc Managed Status is Managed</errorMessage>
</ValidationRule>