GearsetPOC/force-app/main/default/objects/PoS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pos_code__c</columns>
    <columns>pos_description__c</columns>
    <columns>market__c</columns>
    <columns>market_code__c</columns>
    <columns>channel__c</columns>
    <columns>sub_channel__c</columns>
    <columns>commercial_group__c</columns>
    <columns>distributor__c</columns>
    <columns>DistributorChannel__c</columns>
    <columns>Tmc_Managed_Status__c</columns>
    <columns>Tmc_Managed_Company__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Account__c</field>
        <operation>contains</operation>
        <value>PEAK</value>
    </filters>
    <label>All</label>
</ListView>